src/test/deca/syntax/invalid/homebrew/testNoOParent.deca
println "c'est une erreur");
